# Generic-C-Collections

./: .gitlab-ci.yml  CMakeLists.txt  README.md
examples/: CMakeLists.txt  funwithqueues.c  funwithstacks.c  funwithvectors.c
extlibs/: CMakeLists.txt
extlibs/src/: log.c
libs/: CMakeLists.txt
libs/include/: queue.h  stack.h  vector.h
libs/src/: queue.c  stack.c  vector.c
tests/: CMakeLists.txt  test_vector.c  test_vector_logs.txt
